--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
     />
+
+    <script defer src="./main.js"></script>
   </head>
   <body>
     <main>
@@ -25,14 +27,14 @@
                 <label for="kmToTravel" class="form-label"
                   >Km da percorrere</label
                 >
-                <input type="text" id="kmToTravel" class="form-control" />
+                <input type="number" id="kmToTravel" class="form-control" />
               </div>
               <div>
                 <label for="ageRange" class="form-label">Fascia d'eta</label>
                 <select id="ageRange" class="form-select">
-                  <option value="adult">Maggiorenne</option>
-                  <option value="underage">Minorenne</option>
-                  <option value="over65">Over 65</option>
+                  <option value="maggiorenne">Maggiorenne</option>
+                  <option value="minorenne">Minorenne</option>
+                  <option value="over-65">Over 65</option>
                 </select>
               </div>
               <div class="d-flex justify-content-center gap-3 mt-5 w-100">
@@ -55,7 +57,7 @@
           <div class="card rounded-4">
             <div class="card-body">
               <h3 class="card-title mb-3">Dettaglio passeggeri</h3>
-              <div class="table-responsive">
+              <div class="table-responsive tickets">
                 <table class="table">
                   <thead>
                     <tr>
@@ -66,29 +68,7 @@
                       <th scope="col">Costo biglietto</th>
                     </tr>
                   </thead>
-                  <tbody>
-                    <tr>
-                      <th>Gabriele bonuccelli</th>
-                      <td>Biglietto minorenni</td>
-                      <td>8</td>
-                      <td>34574</td>
-                      <td>2.10&euro;</td>
-                    </tr>
-                    <tr>
-                      <th>Giancarlo ricci</th>
-                      <td>Biglietto over^5</td>
-                      <td>5</td>
-                      <td>34575</td>
-                      <td>2.10&euro;</td>
-                    </tr>
-                    <tr>
-                      <th>john doe</th>
-                      <td>Biglietto standard</td>
-                      <td>3</td>
-                      <td>45678</td>
-                      <td>2.10&euro;</td>
-                    </tr>
-                  </tbody>
+                  <tbody></tbody>
                 </table>
               </div>
             </div>
